--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -3,15 +3,17 @@
 {% block title %}Sol's Portfolio{% endblock title %}
 
 {% block body %}
-  <div class="container-lg">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mauris nisl, viverra vel pulvinar vel, semper
-      ac risus. Donec aliquet odio ipsum, ac bibendum ante venenatis in. Nunc sapien risus, dictum sit amet elit
-      vitae, sollicitudin lobortis neque. Suspendisse vitae dictum lectus. Suspendisse potenti. Praesent rhoncus
-      malesuada dolor ut sollicitudin. In fermentum mi eros, dignissim auctor nibh mollis sed. Praesent sed lorem
-      tempor, maximus felis non, interdum quam. Phasellus eget tristique dui. Class aptent taciti sociosqu ad
-      litora torquent per conubia nostra, per inceptos himenaeos. Morbi pellentesque felis quis dolor
-      sollicitudin, a maximus mauris placerat.
-    </p>
+  <div class="container col-xxl-8 px-4 py-4 mt-3">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-10 col-sm-8 col-lg-6"> 
+        <img src="static/img/code.png" class="d-block mx-lg-auto img-fluid" alt="Example of Code" width="500" height="500" loading="lazy"> </div>
+      <div class="col-lg-6">
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Freelancer Python Full-Stack Developer</h1>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus id libero fringilla, congue nunc dictum, dictum tellus. Curabitur id scelerisque libero, vel varius ex. Quisque eget dui dignissim, efficitur elit a, laoreet libero. Vestibulum consectetur, sapien id viverra rhoncus, urna felis tincidunt metus, ut convallis tortor magna eget dui. Sed at bibendum augue. Proin laoreet lectus a congue semper. Suspendisse et lectus ut eros consectetur laoreet. Praesent ut semper metus, in placerat libero. Curabitur rhoncus, eros vel varius feugiat, velit risus aliquet tellus, at tincidunt arcu ipsum sit amet erat. In ornare justo id fermentum fringilla. Nulla facilisi. </p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start"> 
+          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Check Portfolio</button>
+        </div>
+      </div>
+    </div>
   </div>
 {% endblock body %}
