--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -7,13 +7,16 @@
     <title>{% block title %}{% endblock title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <link href="static/css/style.css" rel="stylesheet">
+    <link href="static/svg/tsg-logo-b.svg" rel="icon">
 </head>
 
 <body>
     {% include "header.jinja" %}
 
     {% block body %}{% endblock body %}
+
+    {% include "footer.jinja" %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
