--- a/templates/header.jinja
+++ b/templates/header.jinja
@@ -1,14 +1,16 @@
-<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom main dark">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <svg class="bi me-2" width="40" height="32" aria-hidden="true">
-            <use xlink:href="#bootstrap"></use>
-        </svg>
-        <span class="fs-4">ThreeSolarGravels</span>
-    </a>
-    <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About Me</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Portfolio</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">GitHub</a></li>
-    </ul>
-</header>
+<div class="container-fluid fixed-top px-0">
+    <div class="gradient"></div>
+    <nav class="navbar navbar-expand-lg px-3">
+        <div class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <img src="static/svg/tsg-logo-b.svg" class="bi me-2" width="40" height="40">
+            <span class="fs-4">ThreeSolarGravels</span>
+        </div>
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="{{ url_for('index') }}" class="nav-link active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">About Me</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Portfolio</a></li>
+            <li class="nav-item"><a href="https://github.com/SolarGravel" class="nav-link">GitHub</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Contact Me</a></li>
+        </ul>
+    </nav>
+</div>
