Change Lore Ipsum text to an actual description.

--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -1,6 +1,6 @@
 {% extends "base.jinja" %}
 
-{% block title %}Sol's Portfolio{% endblock title %}
+{% block title %}ThreeSolarGravel{% endblock title %}
 
 {% block body %}
   <div class="container col-xxl-8 px-4 py-4 mt-3">
@@ -9,9 +9,9 @@
         <img src="static/img/code.png" class="d-block mx-lg-auto img-fluid" alt="Example of Code" width="500" height="500" loading="lazy"> </div>
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Freelancer Python Full-Stack Developer</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus id libero fringilla, congue nunc dictum, dictum tellus. Curabitur id scelerisque libero, vel varius ex. Quisque eget dui dignissim, efficitur elit a, laoreet libero. Vestibulum consectetur, sapien id viverra rhoncus, urna felis tincidunt metus, ut convallis tortor magna eget dui. Sed at bibendum augue. Proin laoreet lectus a congue semper. Suspendisse et lectus ut eros consectetur laoreet. Praesent ut semper metus, in placerat libero. Curabitur rhoncus, eros vel varius feugiat, velit risus aliquet tellus, at tincidunt arcu ipsum sit amet erat. In ornare justo id fermentum fringilla. Nulla facilisi. </p>
+        <p class="lead">My name is Bruno Milton, a 20 years old, Computer Science student in Brazil. I'm an amateur Software and Web Developer, working in front-end with HTML, CSS and JavaScript; back-end with Python; database management with PostgreSQL and SQLAlchemy; and data analysis with Anaconda.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start"> 
-          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Check Portfolio</button>
+          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Check My Portfolio</button>
         </div>
       </div>
     </div>
