--- a/templates/footer.jinja
+++ b/templates/footer.jinja
@@ -1,4 +1,4 @@
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-1 px-2 mt-4 border-top">
+<footer class="fixed-bottom d-flex flex-wrap justify-content-between align-items-center py-1 px-2 mt-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
         <a  href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1" aria-label="Bootstrap"> 
             <img src="static/svg/tsg-logo-b.svg" class="bi" width="30" height="24">
