Correct index page

--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -1,6 +1,6 @@
 {% extends "base.jinja" %}
 
-{% block title %}ThreeSolarGravel{% endblock title %}
+{% block title %}ThreeSolarGravels{% endblock title %}
 
 {% block body %}
   <div class="container col-xxl-8 px-4 py-4 mt-3">
@@ -8,7 +8,7 @@
       <div class="col-10 col-sm-8 col-lg-6"> 
         <img src="static/img/code.png" class="d-block mx-lg-auto img-fluid" alt="Example of Code" width="500" height="500" loading="lazy"> </div>
       <div class="col-lg-6">
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Freelancer Python Full-Stack Developer</h1>
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Freelancer Full-Stack Developer</h1>
         <p class="lead">My name is Bruno Milton, a 20 years old, Computer Science student in Brazil. I'm an amateur Software and Web Developer, working in front-end with HTML, CSS and JavaScript; back-end with Python; database management with PostgreSQL and SQLAlchemy; and data analysis with Anaconda.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start"> 
           <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Check My Portfolio</button>
