Add portfolio image and add zoom effect on project card

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,3 +68,11 @@ nav .link-body-emphasis {
     --bs-link-hover-color: #199BB6;
     --bs-secondary-color: #A9A9A9;
 }
+
+.zoomout {
+    transition: transform .3s;
+}
+
+.zoomout:hover {
+	transform: scale(1.1);
+}
