--- a/templates/projects.jinja
+++ b/templates/projects.jinja
@@ -15,13 +15,13 @@
 <div class="container">
   <div class="card mb-3">
     <div class="row g-0">
-      <div class="col-md-3">
-        <img src="static/img/code.png" width="300" height="300" class="img-fluid rounded-start"
-          alt="Print of the Portfolio Website.">
+      <div class="col-md-3 zoomout">
+        <a href="https://github.com/SolarGravel/portfolio-site"><img src="static/img/portfolio.jpg" width="300" height="300" class="img-fluid rounded-start"
+          alt="Print of the Portfolio Website."></a>
       </div>
       <div class="col-md">
         <div class="card-body">
-          <h2 class="card-title fw-bold mb-3">> Portfolio Website</h2>
+          <h2 class="card-title fw-bold mb-3">> Portfolio Website</i></h2>
           <ul class="list-group list-group-horizontal-sm list-group-flush my-3">
             <li class="list-group-item"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                 fill="currentColor" viewBox="0 0 50 50">
@@ -42,9 +42,9 @@
                 </path>
               </svg> Python</li>
           </ul>
-          <p class="card-text my-2">The Github link and code for this site, cointaining the use of the Flask framework
+          <p class="card-text my-2">The Github link and code for this portifolio Website, cointaining the use of the Flask framework
             and Bootstrap for the HTML formating with custom CSS.</p>
-          <div class="col-md">
+          <div class="col-md mt-5">
             <p class="card-text"><small class="float-start text-body-secondary my-2">Last updated 3 mins ago</small></p>
             <a href="https://github.com/SolarGravel/portfolio-site" class="card-title float-end btn btn-primary">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github"
@@ -59,27 +59,5 @@
       </div>
     </div>
   </div>
-  <div class="card mb-3">
-    <div class="row g-0">
-      <div class="col-md-4">
-        <img src="..." class="img-fluid rounded-start" alt="Print of the Dice bot in work.">
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">SolarDice</h5>
-          <p class="card-text">A Discord bot that rolls dices for TTRPGs.</p>
-          <p class="card-text"><small class="float-start text-body-secondary my-2">Last updated 2 months ago</small></p>
-          <a href="https://github.com/SolarGravel/SolarDice" class="card-title float-end btn btn-primary">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github"
-              viewBox="0 0 16 16">
-              <path
-                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
-            </svg>
-            GitHub
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+
 {% endblock body %}
